* filter/pipermail.pl: Add new filter.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -40,7 +40,8 @@ filter_DATA = bzip2.pl \
 	      apachecache.pl \
 	      mp3.pl \
 	      macbinary.pl \
-	      applefile.pl
+	      applefile.pl \
+	      pipermail.pl
 
 EXTRA_DIST = $(filter_DATA)
 
