--- a/scripts/lnnmz.in
+++ b/scripts/lnnmz.in
@@ -1,7 +1,7 @@
 #! %PERL%
 # -*- Perl -*-
 # lnnmz - program to make NMZ.field.link
-# $Id: lnnmz.in,v 1.3 2001-11-06 05:28:36 rug Exp $
+# $Id: lnnmz.in,v 1.4 2004-09-07 10:26:18 opengl2772 Exp $
 #
 # Copyright (C) 2000 osamu2001@livedoor.com  All rights reserved.
 # Copyright (C) 2000 furukawa@tcp-ip.or.jp  All rights reserved.
@@ -73,6 +73,11 @@ sub lnnmz{
 
     my $nmzi = new nmzidx($dir, 'r');
     my $fh = $nmzi->open_flist;
+    unless (defined $fh->{'t'}) {
+        $fh->close;
+        $nmzi->close;
+        return;
+    }
     my $nmzo = new nmzidx($dir, 'w');
     my $fo = $nmzo->open_field('link');
     my %list_f;
