--- a/scripts/adnmz.in
+++ b/scripts/adnmz.in
@@ -1,7 +1,7 @@
-#! %PERL%
+#! %PERL% -w
 # -*- Perl -*-
 # adnmz.pl - make NMZ.field.adjacency
-# $Id: adnmz.in,v 1.3 2001-11-06 05:28:36 rug Exp $
+# $Id: adnmz.in,v 1.4 2004-09-19 03:21:07 opengl2772 Exp $
 #
 # Copyright (C) 2001 Hajime BABA  All rights reserved.
 # Copyright (C) 2001 Namazu Project  All rights reserved.
@@ -68,6 +68,7 @@ sub adnmz {
     my $nmzr = new nmzidx($dir, 'r');
     my $fr = $nmzr->open_flist;
     my %list_f;
+    $ndoc = 0;
     while (defined $fr->read(\%list_f)){
         my $file_name = $list_f{'r'};
 	$docid{$file_name} = $ndoc + 1;  # NOTE: DocID begins with 1.
