--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.161 2004-04-29 16:00:39 opengl2772 Exp $
+dnl $Id: configure.in,v 1.162 2004-09-30 12:34:54 opengl2772 Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -439,6 +439,7 @@ AC_OUTPUT([Makefile
 	   tests/data/dup-field/Makefile
 	   tests/data/ja-mac/Makefile
 	   tests/data/ja-appl90/Makefile
+	   pltests/Makefile
 	  ],
 	  [chmod +x nmz-config \
 	    ]) 
