--- a/scripts/nmzegrep.in
+++ b/scripts/nmzegrep.in
@@ -4,7 +4,7 @@
 # nmzegrep - search namazu-indexed documents for a given pattern and 
 #            print lines matching the pattern.
 # 
-# $Id: nmzegrep.in,v 1.1 2004-09-18 12:30:41 usu Exp $
+# $Id: nmzegrep.in,v 1.2 2004-10-01 16:43:16 usu Exp $
 #
 # Copyright (C) 2004 Yukio USUDA All rights reserved.
 # Copyright (C) 2004 Namazu Project All rights reserved.
@@ -28,7 +28,7 @@
 
 {
     package mknmz;
-    $SYSTEM = 'unix' ;
+    $SYSTEM = ^O ;
 }
 
 use strict;
