--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.143 2004-09-18 12:30:41 usu Exp $
+# $Id: mknmz.in,v 1.144 2004-10-09 08:55:47 usu Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000,2001 Namazu Project All rights reserved.
@@ -1234,7 +1234,14 @@ sub absolute_path($$) {
     if (($SYSTEM eq "MSWin32") || ($SYSTEM eq "os2")) {
 	    $path =~ s!([\x81-\x9f\xe0-\xef][\x40-\x7e\x80-\xfc]|[\x01-\x7f])!
 	    $1 eq "\\" ? "/" : $1!gex;
-        if ($path !~ m!^[A-Z]:/!i) {
+        if ($path =~ m!^//!) {
+        } elsif ($path =~ m!^/[^/]!) {
+	    my $driveletter = $cwd;
+	    if ($driveletter =~ m!^([A-Z]:)!i){
+		$driveletter = $1;
+	    }
+            $path = "$driveletter$path";
+	} elsif ($path !~ m!^[A-Z]:/!i) {
             $path = "$cwd/$path";
         }
     } else {
